:sparkles: add metadata file; update index.html

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html>
 <head>
-<title>flags.ox3.in</title>
+<title>All Flags</title>
+<link rel="stylesheet" href="https://ez-css.vercel.app">
 </head>
 <body>
-<h1>flags.ox3.in</h1>
+<h1>All Flags</h1>
 <p>Lots and lots of flags.</p>
-<p><a href="https://github.com/oxguy3/flags/blob/gh-pages/README.md">Click here for documentation</a></p>
+<p><a href="https://github.com/CodingGarden/flags">Click here for documentation</a></p>
 </body>
 </html>
